# squid-control

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  loop.py  pyproject.toml  requirements.txt  start_hypha_service.py
.github/workflows/: tests.yml
docker/: Dockerfile
docs/: SEGMENTATION_TUTORIAL.md
hypha_tools/artifact_manager/: artifact_manager.py
scripts/: README_OPERA_IMPORT.md  analyze_opera_dataset.py  create_zarr_snapshot.py  download_opera_plates.py  import-zarr-upload-artifact-manager.py  import_opera_to_zarr.py  mount_reef_harddisk.sh  plate1_ome_preview.py  run_tests.py  test_opera_import.py  test_opera_import_small.py  upload_sim_samples.py  upload_u2os_timelapse.py  validate_opera_import.py
squid_control/: README.md  __init__.py  __main__.py  mirror_hypha_service.py  offline_processing.py  run_mirror_service.py  simulation_samples.py  squid_controller.py  start_hypha_service.py
squid_control/config/: configuration_HCS_v2_63x_example.ini  configuration_HCS_v2_example.ini  configuration_Squid+.ini  configuration_Squid+_example.ini  configuration_squid+_3.ini  configuration_squid_1.ini  configuration_squid_2.ini
squid_control/control/: Xeryon_settings.txt  config.py  core.py  edge_positions.json  filter_wheel.py  microcontroller.py  objective_switcher.py
squid_control/control/camera/: __init__.py  camera_default.py  camera_toupcam.py
squid_control/control/gxipy/: __init__.py
squid_control/control/utils/: __init__.py  generate_software_limit.py  image_processing.py
squid_control/control/utils/illumination_calibration/: __init__.py  calibration_manager.py
squid_control/controller/: __init__.py  acquisition.py  scanning.py  squid_controller.py
squid_control/hardware/: Xeryon_settings.txt  config.py  core.py  filter_wheel.py  microcontroller.py  objective_switcher.py  processing_handler.py
squid_control/hardware/camera/: __init__.py  camera_default.py  camera_toupcam.py
squid_control/hardware/drivers/: Xeryon.py
squid_control/hardware/drivers/daheng_camera/Galaxy_Linux-armhf_Gige-U3_32bits-64bits_1.3.1911.9271/Galaxy_camera/bin_armv7hf/: GxViewer
squid_control/hardware/drivers/gxipy/: __init__.py  gxiapi.py
squid_control/hypha_tools/: cell_extractor.py  embedding_generator.py  hypha_storage.py  microsam_client.py  snapshot_utils.py  vision_inspection.py  weaviate_client.py
squid_control/hypha_tools/artifact_manager/: artifact_manager.py
squid_control/hypha_tools/chatbot/: aask.py
squid_control/mirror/: __init__.py  cli.py  mirror_service.py  video_track.py
squid_control/service/: __init__.py  microscope_service.py  simulation_zarr_asgi.py  video_stream.py
squid_control/services/: README.md  __init__.py
squid_control/services/mirror/: __init__.py  cli.py  mirror_service.py  video_track.py
squid_control/simulation/: __init__.py  samples.py
squid_control/stitching/: __init__.py  zarr_canvas.py
squid_control/storage/: snapshot_utils.py
squid_control/storage/artifact_manager/: artifact_manager.py
squid_control/utils/: __init__.py  image_processing.py  logging_utils.py  video_utils.py
squid_control/utils/illumination_calibration/: __init__.py
tests/: README.md  conftest.py  pytest.ini  test_autofocus_retry.py  test_config_helpers.py  test_connection.py  test_hypha_service.py  test_microscope_busy_state.py  test_mirror_service.py  test_offline_processing.py  test_segmentation_integration.py  test_simulation_zarr_asgi.py  test_squid_controller.py  test_squid_plus_features.py  test_squid_plus_hypha_service.py  test_upload_and_endpoints.py  test_validation_composite.py  test_webrtc_e2e.py  test_zip_upload_endpoints.py
