[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squid-control"
version = "0.1.0"
readme = "README.md"
description = "Squid Microscope Control Software"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "requests>=2.26.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
    "lxml>=4.6.0",
    "scikit-image>=0.18.0",
    "pyserial>=3.5",
    "crc>=1.3.0",
    "imageio>=2.9.0",
    "tifffile>=2021.7.2",
    "hypha-rpc>=0.20.0",
    "zarr>=2.10.0",
    "flask>=2.0.0",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "blosc>=1.10.0",
    "aiohttp>=3.8.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
all = [
    "qtpy>=2.0.0",
    "pyqt5>=5.15.0",
    "pyqt5-tools>=5.15.0",
    "pyqtgraph>=0.12.0",
    "tensorrt",
]
qt = [
    "qtpy>=2.0.0",
    "pyqt5>=5.15.0",
    "pyqt5-tools>=5.15.0",
    "pyqtgraph>=0.12.0",
]
tracking = [
    "tensorrt",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[project.scripts]
squid-control = "squid_control.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/squid-control"
Repository = "https://github.com/yourusername/squid-control"
Documentation = "https://squid-control.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/squid-control/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["squid_control*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
squid_control = [
    "*.xml",
    "*.ini",
    "*.txt",
    "*.md",
    "icon/*",
    "images/*",
    "control/**/*",
    "configurations/*",
]